Crear lógica de Inicio de sesión.

--- a/angular-ui/src/app/modules/dashboard/dashboard.component.html
+++ b/angular-ui/src/app/modules/dashboard/dashboard.component.html
@@ -29,11 +29,11 @@
   </div>
   
   <mat-drawer-container class="example-container content" autosize>
-    <mat-drawer #drawer class="example-sidenav" class="width-sidenav sidenav" mode="side" opened>
+    <mat-drawer #drawer class="width-sidenav sidenav" mode="side" opened>
       <app-sidenav></app-sidenav>
     </mat-drawer>
   
-    <div class="example-sidenav-content">
+    <div class="sidenav-content">
         <p>Contenido</p>
     </div>
   
