--- a/angular-ui/src/app/modules/dashboard/dashboard.component.css
+++ b/angular-ui/src/app/modules/dashboard/dashboard.component.css
@@ -6,6 +6,7 @@
     padding: 0 20px;
     background-color: #424242;
     color: #fff;
+    border-bottom: 1px solid #6d6d6d;
 }
 
 .width-sidenav{
@@ -14,6 +15,7 @@
 
  .sidenav{
     padding: 20px;
+    border-right: 1px solid #6d6d6d;
  }
 
 .content{
@@ -57,4 +59,8 @@
 .info-menu{
     width: 250px;
     padding: 20px;
+}
+
+.sidenav-content{
+    padding: 40px;
 }
