--- a/angular-ui/src/app/modules/dashboard/dashboard.component.html
+++ b/angular-ui/src/app/modules/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
         </div>
         {{user.nombre}} {{user.apellido}}
       </div> -->
-      <button mat-menu-item><mat-icon aria-hidden="false" aria-label="Example home icon">logout</mat-icon>Cerrar sesion</button>
+      <button mat-menu-item (click)="logout()"><mat-icon aria-hidden="false" aria-label="Example home icon">logout</mat-icon>Cerrar sesión</button>
     </mat-menu>
   </div>
   
