--- a/angular-ui/src/app/signin/signin.component.html
+++ b/angular-ui/src/app/signin/signin.component.html
@@ -1,5 +1,5 @@
 <div class="contenedor">
-    <form class="contenedor-formulario" [formGroup]="formulario" autocomplete="off" style="margin-left: 40px;">
+    <form class="contenedor-formulario" [formGroup]="formulario" autocomplete="off">
         <div class="contenedor-titulo">
             <p class="titulo-formulario">Registrarse</p>
         </div>
