--- a/angular-ui/src/app/modules/dashboard/dashboard.component.css
+++ b/angular-ui/src/app/modules/dashboard/dashboard.component.css
@@ -4,9 +4,9 @@
     align-items: center;
     height: 60px;
     padding: 0 20px;
-    background-color: #424242;
-    color: #fff;
-    border-bottom: 1px solid #6d6d6d;
+    background-color: var(--surface);
+    color: var(--text-surface);
+    border-bottom: 1px solid var(--border);
 }
 
 .width-sidenav{
@@ -14,8 +14,10 @@
  }
 
  .sidenav{
-    padding: 20px;
-    border-right: 1px solid #6d6d6d;
+    padding: 0px!important;
+    border-right: 1px solid var(--border);
+    /* border: none; */
+    background: var(--surface);
  }
 
 .content{
@@ -27,13 +29,14 @@
     display: flex;
     /* flex-direction: row; */
     align-items: center;
-    padding: 5px 15px;
-    border-radius: 5px;
+    padding: 5px 5px;
+    border-radius: 50%;
 }
 
 .content-user:hover{
     cursor: pointer;
-    background-color: #4f4f4f;
+    background: var(--hovermenu);
+    
 }
 
 .separador-10{
@@ -41,26 +44,58 @@
 }
 
 .user{
-    height: 35px;
-    width: 35px;
-    background-color: brown;
+    background-color: var(--primary);
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.user span{
-    color: #fff;
-    font-weight: 500;
+.user-small{
+    height: 35px;
+    width: 35px;
+}
+
+.user-small span{
     font-size: 16px;
 }
 
+.user-big{
+    height: 50px;
+    width: 50px;
+}
+
+.user-big span{
+    font-size: 24px;
+}
+
+.user span{
+    color: var(--text-primary);
+    font-weight: 500;
+}
+
 .info-menu{
-    width: 250px;
+    min-width: 250px;
     padding: 20px;
 }
 
 .sidenav-content{
     padding: 40px;
+    height: calc(100vh - 60px);
+    background: var(--background);
+}
+
+.flexible{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-user{
+    margin-top: 5px;
+    text-align: center;
+    padding: 10px 0;
+    color: var(--low-emphasis);
+    cursor: default;
 }
