--- a/angular-ui/src/app/sidenav/sidenav.component.html
+++ b/angular-ui/src/app/sidenav/sidenav.component.html
@@ -1,6 +1,12 @@
 <div>
-    <ul>
-        <li>Mis mapas</li>
-        <li>Setting</li>
-    </ul>
+    <mat-selection-list #list [multiple]="false" >
+        <mat-list-option class="elemento-lista" class="option active">
+            <!-- <mat-icon mat-list-icon>folder</mat-icon> -->
+            <div mat-line class="text-option">Mapas</div>
+        </mat-list-option>
+        <mat-list-option class="elemento-lista" class="option">
+            <!-- <mat-icon mat-list-icon>settings</mat-icon> -->
+            <div mat-line class="text-option">Configuración</div>
+        </mat-list-option>
+    </mat-selection-list>
 </div>
