--- a/angular-ui/src/styles.css
+++ b/angular-ui/src/styles.css
@@ -1,4 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root {
+    --background: #121212;
+    --surface: #1E1E1E; 
+    --primary: #BB86FC;
+    --secondary: #03DAC6;
+
+    --text-background: #9C9C9C;
+    --text-surface: #DCDCDC;
+    --text-primary: #39294A;
+    --text-secondary: #002D29;
+
+    --backgroundmenu: #2E2E2E;
+    --hovermenu: #2E2E2E; 
+
+    --high-emphasis : rgba(255,255,255,0.87);
+    --low-emphasis: rgba(255,255,255,0.6);
+    --disabled: rgba(255,255,255,0.38);
+
+    --border: #2E2E2E;
+
+  }
+
+/* Colores de texto: valores de opacidad → alto enfasis: 87%; medio enfasis: 60%; texto-disabled: 38%  */
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-menu-content{
+  background: var(--backgroundmenu)!important;
+}
+
+mat-selection-list{
+  padding: 0px!important;
+}
