Agrego listado mockeado y se comenta un bug en backend con el response de login

--- a/angular-ui/src/app/modules/dashboard/dashboard.component.html
+++ b/angular-ui/src/app/modules/dashboard/dashboard.component.html
@@ -41,7 +41,7 @@
     </mat-drawer>
   
     <div class="sidenav-content">
-        <p>Contenido</p>
+        <app-map-list></app-map-list>
     </div>
   
   </mat-drawer-container>
