--- a/angular-ui/src/app/modules/dashboard/dashboard.component.html
+++ b/angular-ui/src/app/modules/dashboard/dashboard.component.html
@@ -41,7 +41,7 @@
     </mat-drawer>
   
     <div class="sidenav-content">
-        <app-map-list></app-map-list>
+        <router-outlet></router-outlet>
     </div>
   
   </mat-drawer-container>
