--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
@@ -1,29 +1,35 @@
-<ng-container *ngIf="maps$ | async as mapList">
-	<div fxLayout="column" fxLayoutGap="20px">
-		<table mat-table [dataSource]="mapList" class="mat-elevation-z8">
+<div class="contenedor">
+	<div class="contenedor-botones-acciones">
+		<button mat-raised-button color="primary">Primary</button>
+	</div>
+	<div class="contenido-vista">
+		<table mat-table [dataSource]="mapList" *ngIf="maps$ | async as mapList" matSort matSortActive="name" matSortDisableClear matSortDirection="desc">
 			<div>
 				<!-- Name Column -->
 				<div>
 					<ng-container matColumnDef="name">
-						<th mat-header-cell *matHeaderCellDef class="container2"> Name</th>
-						<td mat-cell *matCellDef="let element"><span
-							class="container">{{element.name}}</span></td>
+						<th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Nombre</th>
+						<td mat-cell *matCellDef="let element">
+							<span>{{element.name}}</span>
+						</td>
 					</ng-container>
 				</div>
 				<!-- Date_Creation Column -->
 				<div>
 					<ng-container matColumnDef="date_creation">
-						<th mat-header-cell *matHeaderCellDef class="container2">Date_Creation</th>
-						<td mat-cell *matCellDef="let element"><span
-							class="container">{{element.date_creation}}</span></td>
+						<th mat-header-cell *matHeaderCellDef>Fecha de creación</th>
+						<td mat-cell *matCellDef="let element">
+							<span>{{element.date_creation}}</span>
+						</td>
 					</ng-container>
 				</div>
 				<!-- Owner Column -->
 				<div>
 					<ng-container matColumnDef="owner">
-						<th mat-header-cell *matHeaderCellDef class="container2">Owner</th>
-						<td mat-cell *matCellDef="let element"><span
-							class="container">{{element.owner}}</span></td>
+						<th mat-header-cell *matHeaderCellDef>Propietario</th>
+						<td mat-cell *matCellDef="let element">
+							<span>{{element.owner}}</span>
+						</td>
 					</ng-container>
 				</div>
 			</div>
@@ -31,4 +37,4 @@
 			<tr mat-row *matRowDef="let row; columns: displayedColumns;"class="container"></tr>
 		</table>
 	</div>
-</ng-container>
+</div>
