--- a/angular-ui/src/app/modules/dashboard/sidenav/sidenav.component.css
+++ b/angular-ui/src/app/modules/dashboard/sidenav/sidenav.component.css
@@ -25,6 +25,6 @@
 }
 
 .active{
-    color: var(--primary) !important;
+    /* color: var(--primary) !important; */
     background: var(--hovermenu);
 }
