Actualizacion de nombres de rutas

--- a/angular-ui/src/app/modules/dashboard/sidenav/sidenav.component.html
+++ b/angular-ui/src/app/modules/dashboard/sidenav/sidenav.component.html
@@ -1,10 +1,10 @@
 <div>
     <mat-list role="list" class="contenedor-lista">
-        <mat-list-item role="listitem" class="elemento-lista option active" [routerLink]="['/mapas']">
+        <mat-list-item role="listitem" class="elemento-lista option active" [routerLink]="['/maps']">
             <mat-icon mat-list-icon class="color-icon-list">folder</mat-icon> 
             <span style="padding-left: 10px;">Mapas</span>
         </mat-list-item>
-        <mat-list-item role="listitem" class="elemento-lista option" [routerLink]="['/configuracion']">
+        <mat-list-item role="listitem" class="elemento-lista option" [routerLink]="['/setting']">
             <mat-icon mat-list-icon class="color-icon-list">settings</mat-icon> 
             <span style="padding-left: 10px;">Configuración</span>
         </mat-list-item>
