--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
@@ -1,40 +1,74 @@
-<div class="contenedor">
+<ng-container *ngIf="maps$ | async as mapList" >
 	<div class="contenedor-botones-acciones">
-		<button mat-raised-button color="primary">Primary</button>
+		<button mat-mini-fab color="primary" class="example-button-row" (click)="listado = !listado">
+			<ng-container *ngIf="listado === true">
+				<mat-icon>view_module</mat-icon>
+			</ng-container>
+			<ng-container *ngIf="listado === false">
+				<mat-icon>view_list</mat-icon>
+			</ng-container>
+		</button>
 	</div>
-	<div class="contenido-vista">
-		<table mat-table [dataSource]="mapList" *ngIf="maps$ | async as mapList" matSort matSortActive="name" matSortDisableClear matSortDirection="desc">
-			<div>
-				<!-- Name Column -->
-				<div>
-					<ng-container matColumnDef="name">
-						<th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Nombre</th>
-						<td mat-cell *matCellDef="let element">
-							<span>{{element.name}}</span>
-						</td>
-					</ng-container>
-				</div>
-				<!-- Date_Creation Column -->
-				<div>
-					<ng-container matColumnDef="date_creation">
-						<th mat-header-cell *matHeaderCellDef>Fecha de creación</th>
-						<td mat-cell *matCellDef="let element">
-							<span>{{element.date_creation}}</span>
-						</td>
-					</ng-container>
-				</div>
-				<!-- Owner Column -->
-				<div>
-					<ng-container matColumnDef="owner">
-						<th mat-header-cell *matHeaderCellDef>Propietario</th>
-						<td mat-cell *matCellDef="let element">
-							<span>{{element.owner}}</span>
-						</td>
-					</ng-container>
-				</div>
+	<ng-container *ngIf="listado === true">
+		<div class="contenedor">
+			<div class="contenido-vista">
+				<table mat-table [dataSource]="mapList" matSort matSortActive="name" matSortDisableClear matSortDirection="desc">
+					<div>
+						<!-- Name Column -->
+						<div>
+							<ng-container matColumnDef="name">
+								<th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Nombre</th>
+								<td mat-cell *matCellDef="let element">
+									<span>{{element.name}}</span>
+								</td>
+							</ng-container>
+						</div>
+						<!-- Date_Creation Column -->
+						<div>
+							<ng-container matColumnDef="date_creation">
+								<th mat-header-cell *matHeaderCellDef>Fecha de creación</th>
+								<td mat-cell *matCellDef="let element">
+									<span>{{element.date_creation}}</span>
+								</td>
+							</ng-container>
+						</div>
+						<!-- Owner Column -->
+						<div>
+							<ng-container matColumnDef="owner">
+								<th mat-header-cell *matHeaderCellDef>Propietario</th>
+								<td mat-cell *matCellDef="let element">
+									<span>{{element.owner}}</span>
+								</td>
+							</ng-container>
+						</div>
+					</div>
+					<tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
+					<tr mat-row *matRowDef="let row; columns: displayedColumns;"class="container"></tr>
+				</table>
 			</div>
-			<tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
-			<tr mat-row *matRowDef="let row; columns: displayedColumns;"class="container"></tr>
-		</table>
-	</div>
-</div>
+		</div>
+	</ng-container>
+	<ng-container *ngIf="listado === false">
+		<div class="contenedor">
+			<mat-grid-list cols="2" rowHeight="2:1">
+				<div class="contenido-vista">
+					<mat-grid-tile *ngFor="let item of mapList" >
+						<mat-card>
+							<div>
+								<p>Nombre: {{item.name}}</p>
+								<div>
+									<p>Fecha de Creación: </p>
+									<p *ngIf="item.date_creation!==''"> {{item.date_creation}}</p>
+									<p *ngIf="item.date_creation===null">null</p>
+								</div>
+								<div>
+									<p>Propietario: {{item.owner}}</p>
+								</div>
+							</div>
+						</mat-card>
+					</mat-grid-tile>
+				</div>
+			</mat-grid-list>
+		</div>
+	</ng-container>
+</ng-container>
