--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
@@ -2,7 +2,7 @@
 	<div class="contenedor-botones-acciones">
 		<div>
 			<!-- alineado a izquierda -->
-			<input type="file" multiple (input)="subirArchivo($event)">
+			<input type="file" multiple (change)="subirArchivo($event)">
 		</div>
 		<div>
 			<!-- alineado a derecha -->
@@ -16,9 +16,11 @@
 			</button>
 		</div>
 	</div>
+	<!-- <app-drag-drop></app-drag-drop> -->
 	<!-- vista por columnas -->
 	<ng-container *ngIf="listado">
-		<div class="contenedor">
+		<form appDragDrop (fileDropped)="subirArchivo($event)" class="contenedor">
+			<input type="file" multiple (change)="subirArchivo($event)" hidden/>
 			<div class="contenido-vista">
 				<table mat-table [dataSource]="mapList" matSort matSortActive="name" matSortDisableClear matSortDirection="desc" class="tabla-lista">
 					<div>
@@ -51,15 +53,16 @@
 						</div>
 					</div>
 					<tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true" ></tr>
-					<tr mat-row *matRowDef="let row; columns: displayedColumns;" (contextmenu)="onContextMenu($event, row)"></tr>
+					<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+					<!-- (contextmenu)="onContextMenu($event, row)" -->
 				</table>
 			</div>
-		</div>
+		</form>
 	</ng-container>
 
 	<!-- vista por grilla -->
 	<ng-container *ngIf="!listado">
-		<div class="contenedor">
+		<div appDragDrop class="contenedor">
 			<div class="contenido-vista">
 				<mat-grid-list cols="6" rowHeight="1:1">
 					<mat-grid-tile *ngFor="let item of mapList.data" >
@@ -95,7 +98,7 @@
 	</ng-container>
 </ng-container>
 
-<div style="visibility: hidden; position: fixed"
+<!-- <div style="visibility: hidden; position: fixed"
     [style.left]="contextMenuPosition.x"
     [style.top]="contextMenuPosition.y"
     [matMenuTriggerFor]="contextMenu">
@@ -104,4 +107,4 @@
 	<ng-template matMenuContent>
 		<button mat-menu-item (click)="eliminar(item)">Eliminar</button>
 	</ng-template>
-</mat-menu>
+</mat-menu> -->
