--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
@@ -20,7 +20,6 @@
 	<!-- vista por columnas -->
 	<ng-container *ngIf="listado">
 		<form appDragDrop (fileDropped)="subirArchivo($event)" class="contenedor">
-			<input type="file" multiple (change)="subirArchivo($event)" hidden/>
 			<div class="contenido-vista">
 				<table mat-table [dataSource]="mapList" matSort matSortActive="name" matSortDisableClear matSortDirection="desc" class="tabla-lista">
 					<div>
@@ -53,8 +52,7 @@
 						</div>
 					</div>
 					<tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true" ></tr>
-					<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-					<!-- (contextmenu)="onContextMenu($event, row)" -->
+					<tr mat-row *matRowDef="let row; columns: displayedColumns;" (contextmenu)="onContextMenu($event, row)"></tr>
 				</table>
 			</div>
 		</form>
@@ -62,10 +60,10 @@
 
 	<!-- vista por grilla -->
 	<ng-container *ngIf="!listado">
-		<div appDragDrop class="contenedor">
+		<form appDragDrop (fileDropped)="subirArchivo($event)" class="contenedor">
 			<div class="contenido-vista">
 				<mat-grid-list cols="6" rowHeight="1:1">
-					<mat-grid-tile *ngFor="let item of mapList.data" >
+					<mat-grid-tile *ngFor="let item of mapList.data" (contextmenu)="onContextMenu($event, item)">
 						<div class="file">
 							<div class="file-content">
 								<div class="file-icon">
@@ -94,11 +92,11 @@
 					</mat-grid-tile>
 				</mat-grid-list>
 			</div>
-		</div>
+		</form>
 	</ng-container>
 </ng-container>
 
-<!-- <div style="visibility: hidden; position: fixed"
+<div style="visibility: hidden; position: fixed"
     [style.left]="contextMenuPosition.x"
     [style.top]="contextMenuPosition.y"
     [matMenuTriggerFor]="contextMenu">
@@ -107,4 +105,4 @@
 	<ng-template matMenuContent>
 		<button mat-menu-item (click)="eliminar(item)">Eliminar</button>
 	</ng-template>
-</mat-menu> -->
+</mat-menu>
