--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
@@ -4,6 +4,7 @@
 			<!-- alineado a izquierda -->
 			<input type="file" multiple (change)="subirArchivo($event)">
 		</div>
+		<button (click)="abrirSnackBar()">open snackbar</button>
 		<div>
 			<!-- alineado a derecha -->
 			<button mat-icon-button (click)="listado = !listado">
@@ -27,17 +28,12 @@
 						<div>
 							<ng-container matColumnDef="name">
 								<th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+									Nombre
 									<ng-container *ngIf="asc">
-										<button mat-raised-button (click)="sort('nombre', 'asc')">
-											Nombre
-											<mat-icon>keyboard_arrow_down</mat-icon>
-										</button>
+										<button mat-icon-button (click)="sort('nombre', 'asc')" class="icon-ordenar"><mat-icon>north</mat-icon></button>
 									</ng-container>
 									<ng-container *ngIf="!asc">
-										<button mat-raised-button (click)="sort('nombre', 'desc')">
-											Nombre
-											<mat-icon>keyboard_arrow_up</mat-icon>
-										</button>
+										<button mat-icon-button (click)="sort('nombre', 'desc')" class="icon-ordenar"><mat-icon>south</mat-icon></button>
 									</ng-container>
 								</th>
 								<td mat-cell *matCellDef="let element">
@@ -49,17 +45,12 @@
 						<div>
 							<ng-container matColumnDef="date_creation">
 								<th mat-header-cell *matHeaderCellDef>
+									Fecha de Creación
 									<ng-container *ngIf="fechaAsc">
-										<button mat-raised-button (click)="sort('fecha', 'asc')">
-											Fecha de Creación
-											<mat-icon>keyboard_arrow_down</mat-icon>
-										</button>
+										<button mat-icon-button class="icon-ordenar" (click)="sort('fecha', 'asc')"><mat-icon>north</mat-icon></button>
 									</ng-container>
 									<ng-container *ngIf="!fechaAsc">
-										<button mat-raised-button (click)="sort('fecha', 'desc')">
-											Fecha de Creación
-											<mat-icon>keyboard_arrow_up</mat-icon>
-										</button>
+										<button mat-icon-button class="icon-ordenar" (click)="sort('fecha', 'desc')"><mat-icon>south</mat-icon></button>
 									</ng-container>
 								</th>
 								<td mat-cell *matCellDef="let element">
