--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.css
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.css
@@ -5,7 +5,6 @@
 }
 
 .contenedor{
-	/* background: yellow; */
 	height: calc(100% - 56px);
 	width: 100%;
 }
@@ -37,6 +36,10 @@
 
 .mat-column-owner{
 	width: 250px;
+}
+
+.mat-column-loading{
+	width: 50px;
 }
 
 .etiqueta-ext{
@@ -107,3 +110,62 @@
 .icon-ordenar mat-icon{
 	font-size: 16px;
 }
+
+.contenido-expanded{
+	background: black;
+	padding: 10px;
+}
+
+.spinner{
+	height: 10px;
+}
+
+/* tabla expandible */
+
+table {
+	width: 100%;
+  }
+  
+  tr.example-detail-row {
+	height: 0;
+  }
+  
+  /* tr.example-element-row:not(.example-expanded-row):hover {
+	background: whitesmoke;
+  }
+  
+  tr.example-element-row:not(.example-expanded-row):active {
+	background: #efefef;
+  } */
+  
+  .example-element-row td {
+	border-bottom-width: 0;
+  }
+  
+  .example-element-detail {
+	overflow: hidden;
+	display: flex;
+  }
+  
+  .example-element-diagram {
+	min-width: 80px;
+	border: 2px solid black;
+	padding: 8px;
+	font-weight: lighter;
+	margin: 8px 0;
+	height: 104px;
+  }
+  
+  .example-element-symbol {
+	font-weight: bold;
+	font-size: 40px;
+	line-height: normal;
+  }
+  
+  .example-element-description {
+	padding: 16px;
+  }
+  
+  .example-element-description-attribution {
+	opacity: 0.5;
+  }
