--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
@@ -22,7 +22,7 @@
 	<ng-container *ngIf="listado">
 		<form appDragDrop (fileDropped)="subirArchivo($event)" class="contenedor">
 			<div class="contenido-vista">
-				<table mat-table [dataSource]="mapList" matSort matSortActive="name" matSortDisableClear matSortDirection="desc" class="tabla-lista">
+				<table mat-table [dataSource]="mapList"  multiTemplateDataRows matSort matSortActive="name" matSortDisableClear matSortDirection="desc" class="tabla-lista">
 					<div>
 						<!-- Name Column -->
 						<div>
@@ -67,9 +67,37 @@
 								</td>
 							</ng-container>
 						</div>
+
+						<div>
+							<ng-container matColumnDef="loading">
+								<th mat-header-cell *matHeaderCellDef></th>
+								<td mat-cell *matCellDef="let element">
+									<mat-spinner [diameter]="30"></mat-spinner>
+								</td>
+							</ng-container>
+						</div>
 					</div>
-					<tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true" ></tr>
-					<tr mat-row *matRowDef="let row; columns: displayedColumns;" (contextmenu)="onContextMenu($event, row)"></tr>
+
+					<ng-container matColumnDef="expandedDetail">
+						<td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+						  <div [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+							<div class="contenido-expanded">
+								<p>Zunino aprobame</p>
+							</div>
+						  </div>
+						</td>
+					</ng-container>
+
+					
+
+					<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+					<tr mat-row *matRowDef="let element; columns: displayedColumns;"
+						class="example-element-row"
+						[class.example-expanded-row]="expandedElement === element"
+						(contextmenu)="onContextMenu($event, element)"
+						(click)="expandedElement = expandedElement === element ? null : element">
+					</tr>
+					<tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 				</table>
 			</div>
 		</form>
