--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
@@ -82,7 +82,7 @@
 						<td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
 						  <div [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
 							<div class="contenido-expanded">
-								<p>Zunino aprobame</p>
+								<p></p>
 							</div>
 						  </div>
 						</td>
@@ -105,39 +105,31 @@
 
 	<!-- vista por grilla -->
 	<ng-container *ngIf="!listado">
-		<form appDragDrop (fileDropped)="subirArchivo($event)" class="contenedor">
-			<div class="contenido-vista">
-				<mat-grid-list cols="6" rowHeight="1:1">
-					<mat-grid-tile *ngFor="let item of mapList.data" (contextmenu)="onContextMenu($event, item)">
-						<div class="file">
-							<div class="file-content">
-								<div class="file-icon">
-									<mat-icon aria-hidden="false" aria-label="Example home icon">description</mat-icon>
-								</div>
-								<div class="file-name">
-									<!-- <span class="etiqueta-ext mr-10">JSON</span> -->
-									<span>{{item.name}}</span>
-								</div>
-								<div class="file-ext">
-									<span class="etiqueta-ext">JSON</span>
+		<div class="flexible">
+			<form appDragDrop (fileDropped)="subirArchivo($event)" class="contenedor">
+				<div class="contenido-vista">
+					<mat-grid-list cols="6" rowHeight="1:1">
+						<mat-grid-tile *ngFor="let item of mapList.data" (contextmenu)="onContextMenu($event, item)">
+							<div class="file" (click)="verDetalle(item)">
+								<div class="file-content">
+									<div class="file-icon">
+										<mat-icon aria-hidden="false" aria-label="Example home icon">description</mat-icon>
+									</div>
+									<div class="file-name">
+										<span>{{item.name}}</span>
+									</div>
+									<div class="file-ext">
+										<span class="etiqueta-ext">JSON</span>
+									</div>
 								</div>
 							</div>
-							<!-- <div class="file-content">
-								<p>Nombre: {{item.name}}</p>
-								<div>
-									<p>Fecha de Creación: </p>
-									<p *ngIf="item.date_creation!==''"> {{item.date_creation}}</p>
-									<p *ngIf="item.date_creation===null">null</p>
-								</div>
-								<div>
-									<p>Propietario: {{item.owner}}</p>
-								</div>
-							</div> -->
-						</div>
-					</mat-grid-tile>
-				</mat-grid-list>
-			</div>
-		</form>
+						</mat-grid-tile>
+					</mat-grid-list>
+				</div>
+			</form>
+			<app-view-detail *ngIf="verVistaDetalle" [item]="itemSeleccionado" (cerrar)="cerrarVistaDetalle()"></app-view-detail>
+		</div>
+		
 	</ng-container>
 </ng-container>
 
