--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.html
@@ -4,7 +4,7 @@
 			<!-- alineado a izquierda -->
 			<input type="file" multiple (change)="subirArchivo($event.target)">
 		</div>
-		<button (click)="abrirSnackBar()">open snackbar</button>
+		<!-- <button (click)="abrirSnackBar()">open snackbar</button> -->
 		<div>
 			<!-- alineado a derecha -->
 			<button mat-icon-button (click)="listado = !listado">
@@ -37,7 +37,7 @@
 									</ng-container>
 								</th>
 								<td mat-cell *matCellDef="let element">
-									<span><span class="etiqueta-ext mr-10">JSON</span>{{element.name}}</span>
+									<span><span class="etiqueta-ext mr-10" [ngClass]="{amarillo: element.ext == 'mbtiles', azul: element.ext == 'json', celeste: element.ext == 'geojson'}">{{element.ext | uppercase}}</span>{{element.name.substring(0, element.name.lastIndexOf("."))}}</span>
 								</td>
 							</ng-container>
 						</div>
@@ -72,7 +72,7 @@
 							<ng-container matColumnDef="loading">
 								<th mat-header-cell *matHeaderCellDef></th>
 								<td mat-cell *matCellDef="let element">
-									<mat-spinner [diameter]="30"></mat-spinner>
+									<mat-spinner *ngIf="element.estado == 'PROCESANDO'" [diameter]="30"></mat-spinner>
 								</td>
 							</ng-container>
 						</div>
@@ -80,9 +80,9 @@
 
 					<ng-container matColumnDef="expandedDetail">
 						<td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-						  <div [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+						  <div *ngIf="element.log" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
 							<div class="contenido-expanded">
-								<p></p>
+								<p style="font-family: monospace;" *ngFor="let log of element.log">{{log}}</p>
 							</div>
 						  </div>
 						</td>
