--- a/angular-ui/src/app/modules/dashboard/view-detail/view-detail.component.css
+++ b/angular-ui/src/app/modules/dashboard/view-detail/view-detail.component.css
@@ -15,3 +15,13 @@
     align-items: center;
     border-bottom: 1px solid var(--border);
 }
+
+.content{
+    padding: 15px;
+}
+
+.title{
+    font-size: 0.7rem;
+    color: var(--text-background);
+    margin: 0px;
+}
