Comprobar que el token siga siendo válido

--- a/angular-ui/src/app/modules/dashboard/map-list/map-list.component.css
+++ b/angular-ui/src/app/modules/dashboard/map-list/map-list.component.css
@@ -206,5 +206,5 @@ table {
 	padding: 3px 15px;
 	cursor: pointer;
 	border-radius: 7px;
-	background: var(--text-primary);
+	background: var(--backgroundmenu);
 }
